--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngx-formly/core": "^6.3.6",
     "@ngx-formly/material": "^6.3.6",
     "express": "^4.18.2",
+    "firebase": "^10.12.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
