--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.3",
+    "@ngbracket/ngx-layout": "^18.0.0",
     "@ngx-formly/core": "^6.3.6",
     "@ngx-formly/material": "^6.3.6",
     "express": "^4.18.2",
