--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ngbracket/ngx-layout": "^18.0.0",
     "@ngx-formly/core": "^6.3.6",
     "@ngx-formly/material": "^6.3.6",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "express": "^4.18.2",
     "firebase": "^10.12.5",
     "rxjs": "~7.8.0",
