--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@ngx-formly/material": "^6.3.6",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "ag-grid-angular": "^28.1.0",
+    "ag-grid-community": "^28.1.0",
     "express": "^4.18.2",
     "firebase": "^10.12.5",
     "rxjs": "~7.8.0",
