--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ag-grid-community": "^28.1.0",
     "express": "^4.18.2",
     "firebase": "^10.12.5",
+    "flatted": "^3.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
