--- a/DB/package.json
+++ b/DB/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "flatted": "^3.3.1",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "schema-inspector": "^2.1.0"
   }
 }
